--- a/FrontEnd/CSS/style.css
+++ b/FrontEnd/CSS/style.css
@@ -1,5 +1,8 @@
+html{
+
+}
 body{
-  background-image: url(../Images/bg.jpg);
+  background-image: url(../FrontEnd/Images/bg.jpg);
   color:#555555;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -9,7 +12,7 @@ body{
 }
 
 .container{
-  width: 80%;
+  width: 90%;
   margin: auto;
   overflow: hidden;
 }
@@ -23,6 +26,7 @@ body{
   overflow: hidden;
   background-color: #333;
   text-align: center;
+  margin: auto;
 
 }
 
@@ -34,6 +38,7 @@ body{
   text-decoration: none;
   font-size: 18px;
   width: 20%;
+
 
 }
 
@@ -64,11 +69,16 @@ body{
 }
 */
 
-.slideShow {
-  max-width: 80%;
+.slideShowC {
+  max-width: 90%;
+  min-width: 600px;
   margin: auto;
   margin-top: 10px;
   overflow: hidden;
+}
+
+.slideShow{
+  display: none;
 }
 
 .slideShow img{
@@ -85,6 +95,41 @@ body{
   display: block;
   float: right;
   margin: 2%;
+}
+
+.prev, .next{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+
+}
+
+.next{
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.fade{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade{
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
 #mainFooter{
