--- a/FrontEnd/CSS/transport.css
+++ b/FrontEnd/CSS/transport.css
@@ -54,3 +54,26 @@ body{
   padding: 10px;
   box-sizing: border-box;
 }
+
+.transportC{
+  max-width: 90%;
+  min-width: 600px;
+  margin: auto;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.transport{
+  width: 33.33333333333%;
+  display: block;
+  float: left;
+}
+
+.ic{
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.tc{
+  text-align: center;
+}
