--- a/tourGalwayWebsite/templates/ptv.html
+++ b/tourGalwayWebsite/templates/ptv.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/contact.css">
+    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/ptv.css">
 
   </head>
 
@@ -15,18 +15,50 @@
     </header>
 
     <div class="container" id="navBar">
-      <a href="index.html">Home</a>
-      <a href="ptv.html">Places To Visit</a>
-      <a href="food.html">Food</a>
-      <a href="transport.html">Transport</a>
-      <a class="active" href="contact.html">Contact Us</a>
+      <a href="{% url 'home' %}">Home</a>
+      <a class="active" href="{% url 'ptv' %}">Places To Visit</a>
+      <a href="{% url 'food' %}">Food</a>
+      <a href="{% url 'transport' %}">Transport</a>
+      <a href="{% url 'contact' %}">Contact Us</a>
     </div>
 
+<!--
+    <div class="slideshowC">
+
+      <div class="mySlides fade">
+        <div class="numberText">1/3</div>
+        <img src="Images/galway1.jpg" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numberText">2/3</div>
+        <img src="Images/galway2.jpg" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numberText">3/3</div>
+        <img src="Images/galway1.jpg" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div>
+
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+<span class="dot" onclick="currentSlide(1)"></span>
+<span class="dot" onclick="currentSlide(2)"></span>
+<span class="dot" onclick="currentSlide(3)"></span>
+</div>-->
 
   <div class="slideShowC">
 
     <div class="slideShow fade">
-      <img src="ContactUs.png">
+      <img src="places.png">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
