--- a/tourGalwayWebsite/templates/transport.html
+++ b/tourGalwayWebsite/templates/transport.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-{% load static %}
-
-
 
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href=="{% static 'index.css' %}" >
+    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/transport.css">
     <script>
       var slideIndex = 1;
       showSlides(slideIndex);
@@ -46,11 +43,11 @@
     </header>
 
     <div class="container" id="navBar">
-      <a class="active" href="#">Home</a>
-      <a href="ptv.html">Places To Visit</a>
-      <a href="food.html">Food</a>
-      <a href="transport.html">Transport</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="{% url 'home' %}">Home</a>
+      <a href="{% url 'ptv' %}">Places To Visit</a>
+      <a href="{% url 'food' %}">Food</a>
+      <a class="active" href="{% url 'transport' %}">Transport</a>
+      <a href="{% url 'contact' %}">Contact Us</a>
     </div>
 
 <!--
@@ -86,35 +83,46 @@
 <span class="dot" onclick="currentSlide(3)"></span>
 </div>-->
 
-  <div class="slideShowC">
+  <div class="transportC">
 
-    <div class="slideShow fade">
-      <img src="Images/galway1.jpg">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="transport">
+      <div class="ic">
+        <img src="transport.png">
+      </div>
+      <div class="tc">
+        <h3>Bus</h3>
+      </div>
+
     </div>
 
-    <div class="slideShow fade">
-      <img src="Images/galway2.jpg">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <div class="transport">
+      <div class="ic">
+        <img src="transport.png">
+      </div>
+
+      <div class="tc">
+        <h3>Bike</h3>
+      </div>
+
+
     </div>
 
-    <div class="slideShow fade">
-      <img src="Images/galway3.jpg">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="transport">
+      <div class="ic">
+        <img src="transport.png">
+      </div>
+      <div class="tc">
+        <h3>Train</h3>
+      </div>
+
     </div>
 
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+
 
   </div>
-
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
-
-
 <!--
     <div class="container">
       <section id="main">
