Fixed the css,added tests for forum and home

--- a/tourGalwayWebsite/templates/contact.html
+++ b/tourGalwayWebsite/templates/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/contact.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/contact.css' %}">
 
   </head>
 
