--- a/tourGalwayWebsite/static/css/index.css
+++ b/tourGalwayWebsite/static/css/index.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url(../FrontEnd/Images/bg.jpg);
+  background-image: url(../Images/bg.jpg);
   color:#555555;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
@@ -75,7 +75,7 @@ body{
 }
 
 .slideShow{
-  display:;
+  display: block;
 }
 
 .slideShow img{
