--- a/tourGalwayWebsite/templates/food.html
+++ b/tourGalwayWebsite/templates/food.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/food.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/food.css' %}">
 
   </head>
 
