--- a/tourGalwayWebsite/templates/transport.html
+++ b/tourGalwayWebsite/templates/transport.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/transport.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/transport.css' %}">
     <script>
       var slideIndex = 1;
       showSlides(slideIndex);
