--- a/tourGalwayWebsite/templates/ptv.html
+++ b/tourGalwayWebsite/templates/ptv.html
@@ -5,7 +5,7 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/ptv.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/website_base.css' %}" >
   </head>
 
   <body>
