--- a/tourGalwayWebsite/templates/home.html
+++ b/tourGalwayWebsite/templates/home.html
@@ -6,6 +6,7 @@
 <html>
   <head>
     <title>My Website</title>
+    <link rel="stylesheet" href="{% static 'css/website_base.css' %}" >
     <link rel="stylesheet" href="{% static 'css/index.css' %}" >
     <script>
       var slideIndex = 1;
