--- a/tourGalwayWebsite/templates/transport.html
+++ b/tourGalwayWebsite/templates/transport.html
@@ -5,6 +5,7 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/transport.css' %}">
+    <link rel="stylesheet" href="{% static 'css/website_base.css' %}" >
     <script>
       var slideIndex = 1;
       showSlides(slideIndex);
