--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/contact.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/website_base.css' %}">
 
   </head>
 
@@ -22,7 +22,7 @@
       <a href="{% url 'transport' %}">Transport</a>
       <a class="active" href="{% url 'contact' %}">Contact Us</a>
     </div>
-
+    
 
   <div class="slideShowC">
 
