--- a/templates/forum.html
+++ b/templates/forum.html
@@ -19,7 +19,7 @@
             <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a>
             <small class="text-muted d-block">{{ board.description }}</small>
           </td>
-          <td class="align-middle">0</td>
+          <td class="align-middle">{{topics.objects}}</td>
           <td class="align-middle">0</td>
           <td></td>
         </tr>
