--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,15 +1,18 @@
 {% extends 'forum_base.html' %}
+{% load i18n %}
 {% block breadcrumb %}
-  <li class="breadcrumb-item active">Boards</li>
+  <li class="breadcrumb-item active">{% trans "Forum" %}</li>
 {% endblock %}
 {% block content %}
   <table class="table">
     <thead class="thead-inverse">
       <tr>
+        {% blocktrans %}
         <th>Board</th>
         <th>Posts</th>
         <th>Topics</th>
         <th>Last Post</th>
+        {% endblocktrans %}
       </tr>
     </thead>
     <tbody>
