--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base_accounts.html' %}
-
+{% load i18n %}
 {% block content %}
     <div class="row justify-content-center">
       <div class="col-lg-4 col-md-6 col-sm-8">
