--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,5 @@
 {% extends 'base_accounts.html' %}
+{% load i18n %}
 {% block content %}
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-10 col-sm-12">
