--- a/templates/topics.html
+++ b/templates/topics.html
@@ -1,5 +1,7 @@
 {% extends 'forum_base.html' %}
 {% load i18n %}
+{% load humanize %}
+
 {% block title %}
   {{ board.name }} - {{ block.super }}
 {% endblock %}
@@ -11,7 +13,7 @@
 
 {% block post %}
   <div class="form-inline ml-auto my-lg-0">
-      <a href="{% url 'new_topic' board.pk %}"> New Topic</a>
+      <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">{% trans "New topic" %}</a>
   </div>
 {% endblock %}
 
@@ -27,17 +29,17 @@
       </tr>
     </thead>
     <tbody>
-      {% for topic in board.topics.all %}
+        {% for topic in topics %}
         <tr>
-          <td>
-            <a href="{% url 'topic_message' board.pk topic.pk %}">{{ topic.subject }}</a>
-          </td>
-          <td>{{ topic.starter.user }}</td>
-          <td>0</td>
-          <td>0</td>
-          <td>{{ topic.last_updated }}</td>
+          <td><a href="{% url 'topic_message' board.pk topic.pk %}">{{ topic.subject }}</a></td>
+          <td>{{ topic.starter.username }}</td>
+          <td>{{ topic.replies }}</td>
+          <td>{{ topic.views }}</td>
+          <td>{{ topic.last_updated|naturaltime }}</td>
         </tr>
       {% endfor %}
+      
+      
     </tbody>
   </table>
 
