--- a/templates/transport.html
+++ b/templates/transport.html
@@ -92,7 +92,7 @@
         <img src="transport.png">
       </div>
       <div class="tc">
-        <h3>Bus</h3>
+        <h3>{% trans "Bus" %}</h3>
       </div>
 
     </div>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="tc">
-        <h3>Bike</h3>
+        <h3>{% trans "Bike" %}</h3>
       </div>
 
 
@@ -115,7 +115,7 @@
         <img src="transport.png">
       </div>
       <div class="tc">
-        <h3>Train</h3>
+        <h3>{% trans "Train" %}</h3>
       </div>
 
     </div>
