--- a/templates/forum.html
+++ b/templates/forum.html
@@ -1,18 +1,17 @@
 {% extends 'forum_base.html' %}
 {% load i18n %}
 {% block breadcrumb %}
-  <li class="breadcrumb-item active">{% trans "Forum" %}</li>
+  <li class="breadcrumb-item active">Boards</li>
 {% endblock %}
+
 {% block content %}
   <table class="table">
     <thead class="thead-inverse">
       <tr>
-        {% blocktrans %}
         <th>Board</th>
         <th>Posts</th>
         <th>Topics</th>
         <th>Last Post</th>
-        {% endblocktrans %}
       </tr>
     </thead>
     <tbody>
@@ -22,11 +21,29 @@
             <a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a>
             <small class="text-muted d-block">{{ board.description }}</small>
           </td>
-          <td class="align-middle">{{topics.objects}}</td>
-          <td class="align-middle">0</td>
-          <td></td>
+          <td class="align-middle">
+            {{ board.get_posts_count }}
+          </td>
+          <td class="align-middle">
+            {{ board.topics.count }}
+          </td>
+          <td class="align-middle">
+            {% with post=board.get_last_post %}
+              {% if post %}
+                <small>
+                  <a href="{% url 'topic_posts' board.pk post.topic.pk %}">
+                    By {{ post.created_by.username }} at {{ post.created_at }}
+                  </a>
+                </small>
+              {% else %}
+                <small class="text-muted">
+                  <em>No posts yet.</em>
+                </small>
+              {% endif %}
+            {% endwith %}
+          </td>
         </tr>
       {% endfor %}
     </tbody>
-</table>
+  </table>
 {% endblock %}
